# THzRefractIdxGUI

./: CMakeLists.txt  README.md  main.cpp
data/: Dima_Reference.csv  Dima_Sample_pellet1.csv  Jasmin_reference.csv  Jasmin_sample_substrate.csv  Jasmin_substrate.csv  PaperQuartzDataset.csv  PaperSiDataset.csv  PaperSiDataset_3sets.csv  aaTHzExpt19.csv  aaTHzRef1820.csv  blank_ref.csv  blank_ref2.csv  no_sample.csv  no_sample.txt  one_paper_card.csv  one_paper_card.txt  ref_Si.csv  ref_paper_sample.csv  ref_quartz.csv  ref_quartz_paper.csv  two_paper_card.csv  two_paper_card.txt
imgui/misc/fonts/: OGCourier.h  OGCourier_Bold.h  OGCourier_BoldItalic.h  OGCourier_Italic.h
implot/: implot.cpp
include/: constant.h  core_functions.h  data_logger.h  fft.h  global_logger.h  imgui_filedialog.h  imgui_redirect_log.h  load.h
src/: core_functions.cpp  data_logger.cpp  fft.cpp  imgui_filedialog.cpp  imgui_redirect_log.cpp  load.cpp
